# browser-time-tracking-extension

./: .cursorrules  .eslintrc.json  .gitignore  CHANGELOG.md  CHROME_EXTENSION_GUIDE.md  README.md  create_icons.js  manifest.json  package-lock.json  package.json  postbuild.cjs  test_storage.html  tsconfig.json  vite.config.js
backend/: pyproject.toml  requirements.txt
docs/: architecture.md  plan.md
docs/product/: BACKLOG.md  PRD.md  RESEARCH.md
frontend/: package.json
icons/: README.md
src/background/: background.js
src/content/: content.js
src/options/: options.css  options.html  options.js
src/popup/: popup.css  popup.html  popup.js
src/test/: background.test.js  options.test.js  popup.test.js  setup.js
